# lab-pa-4

./: .gitignore  CMakeLists.txt  IndexRecordModel.h  MainRecordModel.h  editrecord.ui  index.h  main_area.cpp  main_area.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  index.cpp  index.h  main_area.cpp  main_area.h  utils.h
ui/: CMakeLists.txt  IndexRecordModel.h  MainRecordModel.h  mainwindow.cpp  mainwindow.h
ui/dialogs/: AddRecordDialog.cpp  AddRecordDialog.h  DeleteRecordDialog.cpp  DeleteRecordDialog.h  EditRecordDialog.cpp  EditRecordDialog.h  GenerateRecordsDialog.cpp  GenerateRecordsDialog.h  SearchRecordsDialog.cpp  SearchRecordsDialog.h
ui/forms/: AddRecordDialog.ui  SearchRecordsDialog.ui  generaterecords.ui  mainwindow.ui
wasm/: CMakeLists.txt  index.h  main.cpp
